--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,26 @@ configure(allprojects) {
 		targetCompatibility=1.5
 	}
 
-	[compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:none']
+	[compileJava, compileTestJava]*.options*.compilerArgs = [
+		"-Xlint:serial",
+		"-Xlint:varargs",
+		"-Xlint:cast",
+		"-Xlint:classfile",
+		"-Xlint:dep-ann",
+		"-Xlint:divzero",
+		"-Xlint:empty",
+		"-Xlint:finally",
+		"-Xlint:overrides",
+		"-Xlint:path",
+		"-Xlint:processing",
+		"-Xlint:static",
+		"-Xlint:try",
+		"-Xlint:-options",     // intentionally disabled
+		"-Xlint:-fallthrough", // intentionally disabled
+		"-Xlint:rawtypes",
+		"-Xlint:deprecation",
+		"-Xlint:unchecked"
+	]
 
 	repositories {
 		maven { url "http://repo.springsource.org/libs-release" }
