Add OkHttp ClientHttpRequestFactory implementation
This commit adds OkHttpRequestFactory which can be used as an
alternative to the native HttpUrlConnection or HttpComponents clients
provided by SimpleClientHttpRequestFactory and
HttpComponentsClientHttpRequestFactory.

Issue: ANDROID-138
GitHub: 10, 12

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ configure(allprojects) {
 	ext.gsonVersion              = "2.2.4"
 	ext.simpleXmlVersion         = "2.6.9"
 	ext.androidRomeVersion       = "1.0.0-r2"
+	ext.okHttpVersion            = "2.0.0"
 	ext.gradleScriptDir          = "${rootProject.projectDir}/gradle"
 
 	apply plugin: 'propdeps'
@@ -164,6 +165,7 @@ project("spring-android-rest-template") {
 	dependencies {
 		provided("com.google.android:android:$androidVersion")
 		compile(project(":spring-android-core"))
+		optional("com.squareup.okhttp:okhttp-urlconnection:$okHttpVersion")
 		optional("org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion")
 		optional("com.fasterxml.jackson.core:jackson-databind:$jackson2Version")
 		optional("com.google.code.gson:gson:$gsonVersion")
