--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -19,6 +19,7 @@
 		<org.simpleframework-version>2.6.9</org.simpleframework-version>
 		<com.google.code.android-rome-feed-reader-version>1.0.0-r2</com.google.code.android-rome-feed-reader-version>
 		<org.mortbay.jetty-version>6.1.9</org.mortbay.jetty-version>
+		<com.squareup.okhttp-version>2.0.0</com.squareup.okhttp-version>
 	</properties>
 
 	<dependencies>
@@ -26,6 +27,11 @@
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
 			<version>${org.springframework.android-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp-urlconnection</artifactId>
+			<version>${com.squareup.okhttp-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
