--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -20,6 +20,7 @@
 		<org.simpleframework-version>2.6.9</org.simpleframework-version>
 		<com.google.code.android-rome-feed-reader-version>1.0.0-r2</com.google.code.android-rome-feed-reader-version>
 		<org.mortbay.jetty-version>6.1.9</org.mortbay.jetty-version>
+		<com.squareup.okhttp-version>1.1.1</com.squareup.okhttp-version>
 	</properties>
 
 	<dependencies>
@@ -88,6 +89,11 @@
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
 			<version>${org.mortbay.jetty-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${com.squareup.okhttp-version}</version>
 		</dependency>
 	</dependencies>
 
