--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	repositories { 
-		maven { url "http://repo.springsource.org/plugins-release" } 
+		maven { url "http://repo.spring.io/plugins-release" } 
 	}
 	dependencies { 
 		classpath "org.springframework.build.gradle:docbook-reference-plugin:0.2.8" 
@@ -58,7 +58,7 @@ configure(allprojects) {
 	]
 
 	repositories {
-		maven { url "http://repo.springsource.org/libs-release" }
+		maven { url "http://repo.spring.io/libs-release" }
 		maven { url "https://android-rome-feed-reader.googlecode.com/svn/maven2/releases" }
 	}
 
