--- a/test/spring-android-auth-test/AndroidManifest.xml
+++ b/test/spring-android-auth-test/AndroidManifest.xml
@@ -4,13 +4,17 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk
+        android:maxSdkVersion="19"
+        android:minSdkVersion="7"
+        android:targetSdkVersion="19" />
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="org.springframework.android.auth.test" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
