--- a/test/spring-android-core-test/AndroidManifest.xml
+++ b/test/spring-android-core-test/AndroidManifest.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.springframework.android.core.test"
-      android:versionCode="1"
-      android:versionName="1.0">
-      
-    <uses-sdk android:minSdkVersion="7" />
-    
-    <instrumentation 
-    	android:targetPackage="org.springframework.android.core.test" 
-    	android:name="android.test.InstrumentationTestRunner" />
-    	
-    <application 
-    	android:icon="@drawable/icon" 
-    	android:label="@string/app_name">
+    package="org.springframework.android.core.test"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-		<uses-library android:name="android.test.runner" />
+    <uses-sdk
+        android:maxSdkVersion="19"
+        android:minSdkVersion="7"
+        android:targetSdkVersion="19" />
 
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="org.springframework.android.core.test" />
+
+    <application
+        android:allowBackup="false"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <uses-library android:name="android.test.runner" />
     </application>
+
 </manifest>
