--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.android</groupId>
 		<artifactId>spring-android-test</artifactId>
-		<version>1.0.2.BUILD-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 
 	<artifactId>spring-android-rest-template-test</artifactId>
