Update reference to Pivotal Software, Inc.

--- a/gradle/publish-maven.gradle
+++ b/gradle/publish-maven.gradle
@@ -52,7 +52,7 @@ def customizePom(pom, gradleProject) {
 				developer {
 					id = "royclarkson"
 					name = "Roy Clarkson"
-					email = "rclarkson@gopivotal.com"
+					email = "rclarkson@pivotal.io"
 				}
 			}
 			issueManagement {
