Use UTF-8 encoding in tests

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -23,6 +23,9 @@
 	</modules>
 
 	<properties>
+		<!-- use UTF-8 for everything -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<android-platform>19</android-platform>
 		<android-maven-plugin-version>3.9.0-rc.2</android-maven-plugin-version>
 		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
