--- a/test/pom.xml
+++ b/test/pom.xml
@@ -33,6 +33,8 @@
 		<com.google.android-version>4.1.1.4</com.google.android-version>
 		<org.springframework.android-version>2.0.0.BUILD-SNAPSHOT</org.springframework.android-version>
 		<org.easymock-version>3.2</org.easymock-version>
+		<org.hamcrest-version>1.3</org.hamcrest-version>
+		<org.mockito-version>1.9.5</org.mockito-version>
 		<com.google.dexmaker-version>1.1</com.google.dexmaker-version>
 		<maven-surefire-plugin-version>2.17</maven-surefire-plugin-version>
 	</properties>
@@ -56,10 +58,25 @@
 			<version>${org.easymock-version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>cglib</groupId>
 					<artifactId>cglib-nodep</artifactId>
+					<groupId>cglib</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>${org.hamcrest-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${org.mockito-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.dexmaker</groupId>
+			<artifactId>dexmaker-mockito</artifactId>
+			<version>${com.google.dexmaker-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.dexmaker</groupId>
