--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>jetty</artifactId>
 			<version>${org.mortbay.jetty-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<version>1.5</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
