--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 	dependencies { 
 		classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
 		classpath("io.spring.gradle:docbook-reference-plugin:0.3.0")
-		classpath "me.champeau.gradle:gradle-javadoc-hotfix-plugin:0.1"
+		classpath("me.champeau.gradle:gradle-javadoc-hotfix-plugin:0.1")
 	}
 }
 
