Partition spring-android-core-test into two test suites
The addition of the comparator and converter packages was overwhelming
some devices and emulators and causing the test runs to force quit.
This commit moves the core util package into its own test suite. Now all
tests run and pass as expected.

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -18,6 +18,7 @@
 
 	<modules>
 		<module>/spring-android-core-test</module>
+		<module>/spring-android-core-util-test</module>
 		<module>/spring-android-rest-template-test</module>
 		<module>/spring-android-auth-test</module>
 	</modules>
