--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	repositories { 
-		maven { url "http://repo.spring.io/plugins-release" } 
+		maven { url "https://repo.spring.io/plugins-release" }
 	}
 	dependencies { 
 		classpath("org.springframework.build.gradle:propdeps-plugin:0.0.7")
@@ -56,7 +56,7 @@ configure(allprojects) {
 	]
 
 	repositories {
-		maven { url "http://repo.spring.io/libs-release" }
+		maven { url "https://repo.spring.io/libs-release" }
 	}
 
 	ext.javadocLinks = [
