--- a/test/spring-android-rest-template-test/AndroidManifest.xml
+++ b/test/spring-android-rest-template-test/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
